StudyMate Test commit

--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -16,3 +16,6 @@ userName=Admin
 password1=admin123
 expectedUrlLogin=https://opensource-demo.orangehrmlive.com/web/index.php/dashboard/index
 cashwise=https://cashwise.us/main
+studymate=https://codewise.studymate.us/login
+studymateEmail=sakydin.tashmurzaev.kk@gmail.com
+studymatePassword=CodeWise2023!
